# kursach_SQL

./: README.md  exp_database.ini  main.py  pyproject.toml
src/: dbmanager.py  utils.py
